<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">PokeItemdle</string>
    <string name="welcome_message">Welcome to PokeItemdle</string>
    <string name="classic_button">Classic</string>
    <string name="descriptionButton">Description</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="toolbar_description">Tool bar</string>
    <string name="remaining_attempts">Tries left: %d</string>
    <string name="hint_select_object">Select an object</string>
    <string name="button_search">Search</string>
    <string name="item_image_description">Object Image</string>
    <string name="loading_objects">Loading objects…</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="guest_button">Continue without an account</string>
    <string name="pista_disponible_en_5">Clue available at: %d</string>
    <string name="intentos_restantes">Remaining attempts: %d</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="cost">Cost</string>
    <string name="fling_power">Fling Power</string>
    <string name="generation">Generation</string>
    <string name="attributes">Attributes</string>
    <string name="effects">Effects</string>
    <string name="unknown">Unknown</string>
    <string name="no_attributes">No attributes available.</string>
    <string name="no_effects">No effects available.</string>
    <string name="no_found">No objects were found.</string>
    <string name="complete">Please complete all fields.</string>
    <string name="cancel">Cancel</string>
    <string name="Session_started">Session started as %s</string>
    <string name="toast_registered">User registered successfully.</string>
    <string name="toast_user_exists">Error: the user already exists.</string>
    <string name="toast_logged_out">Session closed.</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="select_language">Select a language.</string>
    <string name="average_attempts">Your average number of attempts: %.2f</string>
    <string name="not_enough_data">You do not yet have enough data to calculate an average.</string>
    <string name="toast_must_log">You must log in to view your average attempts.</string>
    <string name="error_invalid_credentials">Invalid credentials. Try again.</string>
    <string name="toast_maximum_attempts">You have reached the maximum number of attempts.</string>
    <string name="track_movement">Hint: The type of the move is </string>
    <string name="wrong_attempt">Incorrect attempt. Keep trying. </string>
    <string name="select_movement">Please select a move first.</string>
    <string name="formatted_text">
    Name: %1$s\n
    Power: %2$s %3$s\n
    Accuracy: %4$s %5$s\n
    Type: %6$s %7$s\n
    Damage Class: %8$s %9$s\n
    Description: %10$s %11$s\n
    _____________________________\n
    Previous attempts: %12$s
</string>
    <string name="wrong_email">The email must match the format @gmail.com</string>
    <string name="wrong_password">The password must contain at least 6 characters</string>
    <string name="successful_login">Successful login!</string>
    <string name="unsuccessful_login"> Wrong user or password!</string>
    <string name="successful_register">Successful register!</string>
    <string name="unsuccessful_register"> The user already exists!</string>
    <string name="no_account">Your progress won\'t be stored!</string>
    <string name="average_tries">Your average of tries</string>
    <string name="lost_game">You lost! The movement is: %s</string>
    <string name="try_again">Try again!</string>
    <string name="you_won">You won!</string>
    <string name="winning_dialog">You made it in %d tries</string>
    <string name="start">Start</string>
    <string name="no_description">No description available.</string>
    <string name="Clue">Clue</string>
    <string name="no_clue">No clue available.</string>
    <string name="error_data">Error saving data to the database.</string>
    <string name="select_object">Please select an object first.</string>
    <string name="formatted_text_description">
    Name: %1$s\n
    Cost: %2$s %3$s\n
    Category: %4$s %5$s\n
    Fling-power: %6$s %7$s\n
    Description: %8$s %9$s\n
    _____________________________\n
    Previous attempts: %10$s
</string>
    <string name="change_language">Change language</string>

</resources>