<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:layout_above="@id/footer"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="389dp"
            android:layout_height="66dp"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="389dp"
            android:layout_height="75dp"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />

        <Button
            android:id="@+id/guestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_button" />

        <Button
            android:id="@+id/changeLanguageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- Footer -->
    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:padding="8dp">

    </FrameLayout>
</LinearLayout>
