<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescriptionActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/toolbar_description"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DescriptionActivity">

        <!-- Contenido principal -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Intentos restantes -->

            <!-- Pista disponible -->
            <TextView
                android:id="@+id/attemptsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:text="@string/intentos_restantes"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hintCountdownTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pista_disponible_en_5"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attemptsTextView" />

            <!-- Botón de buscar -->

            <!-- ScrollView para hacer desplazable el resultTextView -->

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="263dp"
                android:layout_height="126dp"
                android:layout_marginTop="60dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.567"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.309"
                app:layout_constraintVertical_chainStyle="packed" />

            <AutoCompleteTextView
                android:id="@+id/PruebaTextView"
                android:layout_width="385dp"
                android:layout_height="86dp"
                android:layout_marginHorizontal="24dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/hint_select_object"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attemptsTextView"
                app:layout_constraintVertical_bias="0.348" />

            <Button
                android:id="@+id/fetchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PruebaTextView"
                app:layout_constraintVertical_bias="0.0" />

            <android.widget.ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="243dp"
                android:layout_height="241dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fetchButton"
                app:layout_constraintVertical_bias="1.0">

                <!-- TextView para mostrar resultados -->
                <TextView
                    android:id="@+id/resultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </android.widget.ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Pantalla de carga -->
        <include
            android:id="@+id/loadingScreen"
            layout="@layout/loading_screen" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
